0030223: Visualization, TKOpenGl - frustum culling does not clip objects within perspective camera